# mapping-gfbio

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Module.mk  README.md
GFBioJavaWS/: .gitignore
cmake/: FindPugiXML.cmake
conf/: settings-default.toml
docker-files/: gfbio-dependencies.csv
docs/: configuration.md  dependencies.txt  doxygen.conf  install.md  jsdoc.conf  makeDoc
docs/waveTutorials/: architecture.html  tutorials.json
htdocs/: gfbio.html  gfbioSearchGadget.html  gfbio_search_visualization.html  idessa.html
htdocs/ajax/: ajax.php  database.php  gfbio.php  index.php
htdocs/compiler/: compile.php
htdocs/src/: common.css  timeline.css  ui.css  ui_login.css  ui_map.css  widget_datasetinfo.css  widget_timeline.css  win_addlayer.css  win_addoperator.css  win_layerinfo.css  win_showgraph.css  win_showhistogram.css  win_showplot.css  win_showtable.css  win_showxygraph.css  win_wizzard.css
htdocs/src/gfbio/: ui_login.css
htdocs/src/operators/: raster_r_example_plot.jstxt  raster_r_example_points.jstxt  raster_r_example_raster.jstxt  raster_r_example_text.jstxt
mapping/: Makefile  Module.mk  cgi.cpp  cluster_experiment.conf  geometrytestbed.cpp  local_experiments.conf  mapping_manager.cpp  rasterdb  rasterdb.cpp
mapping-distributed/: Module.mk
mapping-distributed/rasterdb/: backend_remote.cpp  backend_remote.h  tileserver.cpp
mapping-gfbio/: Module.mk
mapping-gfbio/operators/: abcd_source.cpp  gbif_source.cpp  gfbio_source.cpp  pangaea_source.cpp
mapping-gfbio/services/: gfbio.cpp
mapping-r/: Module.mk
mapping-r/operators/: r_script.cpp
mapping-r/rserver/: rcpp_wrapper.h  rserver.cpp  rserver.h
mapping/cache/: blockingqueue.h  cache.cpp  cache.h  cachetask.cpp  cachetask.h  client.cpp  client.h  common.cpp  common.h  linkedhashmap.h  log.cpp  log.h  manager.cpp  manager.h  replacementpolicy.h  server.cpp  server.h  server_main.cpp  types.cpp  types.h
mapping/cache/config/: cache_config.cpp  cache_config.h  caching_strategy.cpp  caching_strategy.h  reorg_strategy.cpp  reorg_strategy.h
mapping/cache/experiments/: cache_experiments.cpp  cache_experiments.h  cache_experiments_main.cpp  cheat.h  cluster_experiment.cpp  exp_util.cpp  exp_util.h  exp_workflows.h  local_setup.cpp  nbclient.cpp
mapping/cache/index/: connection.cpp  connection.h  index_cache.cpp  index_cache.h  index_cache_manager.cpp  index_cache_manager.h  index_config.cpp  node.h  (+9 more)
mapping/converters/: converter.cpp  converter.h  raw.cpp  raw.h
mapping/datatypes/: attributes.cpp  attributes.h  colorizer.cpp  colorizer.h  geometry.cpp  geometry.h  linecollection.cpp  linecollection.h  multilinecollection.cpp  multilinecollection.h  multipointcollection.cpp  multipointcollection.h  multipolygoncollection.cpp  multipolygoncollection.h  plot.h  pointcollection.cpp  pointcollection.h  polygoncollection.cpp  polygoncollection.h  raster.h  simplefeaturecollection.cpp  simplefeaturecollection.h  spatiotemporal.cpp  spatiotemporal.h  unit.cpp  unit.h
mapping/o/: .gitignore
mapping/operators/: operator.cpp  operator.h  provenance.cpp  provenance.h  queryprofiler.cpp  queryprofiler.h  queryrectangle.cpp  queryrectangle.h  querytools.h
mapping/plot/: histogram.cpp  histogram.h  plot.h  png.cpp  png.h  text.cpp  text.h  xygraph.h
mapping/pointvisualization/: BoundingBox.cpp  BoundingBox.h  Circle.cpp  Circle.h  CircleClusteringQuadTree.cpp  CircleClusteringQuadTree.h  Coordinate.cpp  Coordinate.h  Dimension.cpp  Dimension.h  FindResult.cpp  FindResult.h  QuadTree.cpp  QuadTree.h  QuadTreeNode.cpp  QuadTreeNode.h
mapping/raster/: colors.cpp  colors.h  datavector.h  exceptions.h  export_jpeg.cpp  export_pgm.cpp  export_png.cpp  export_yuv.cpp  geometry.cpp  geometry.h  histogram.cpp  histogram.h  import_gdal.cpp  metadata.cpp  metadata.h  opencl.cpp  opencl.h  plot.h  pointcollection.cpp  pointcollection.h  profiler.cpp  profiler.h  raster.cpp  raster.h  raster_font.h  raster_priv.h  rastersource.cpp  rastersource.h  typejuggling.h  xygraph.h
mapping/rasterdb/: backend.cpp  backend.h  backend_local.cpp  backend_local.h  backend_remote.cpp  backend_remote.h  rasterdb.cpp  rasterdb.h  tileserver.cpp
mapping/rserver/: rcpp_wrapper.h  rinside_callbacks.h  rserver.cpp  rserver.h
mapping/services/: artifact.cpp  fakewfs.cpp  gfbio.cpp  httpparsing.cpp  httpparsing.h  httpservice.cpp  httpservice.h  ogcservice.cpp  ogcservice.h  plot.cpp  plot.h  provenance.cpp  user.cpp  wcs.cpp  wfs.cpp  wfs_request.cpp  wfs_request.h  wms.cpp
mapping/test/: .gitignore  parse_logs.php
mapping/userdb/: backend.h  backend_sqlite.cpp  userdb.cpp  userdb.h
mapping/util/: SunPos.cpp  SunPos.h  base64.cpp  base64.h  binarystream.cpp  binarystream.h  concat.h  configuration.cpp  configuration.h  csv_source_util.cpp  csv_source_util.h  csvparser.cpp  csvparser.h  curl.cpp  curl.h  debug.cpp  debug.h  enumconverter.h  exceptions.h  formula.cpp  formula.h  gdal.cpp  gdal.h  hash.cpp  hash.h  log.cpp  log.h  make_unique.h  nio.cpp  nio.h  server_nonblocking.cpp  server_nonblocking.h  sha1.cpp  sha1.h  shared_mutex.h  sizeutil.cpp  sizeutil.h  socket.cpp  socket.h  sqlite.cpp  (+7 more)
operators/: abcd_source.cpp  gfbio_source.cpp  pangaea_source.cpp
portal/: basketapi.cpp  basketapi.h
services/: gfbio.cpp
src/: CMakeLists.txt
src/operators/: abcd_source.cpp  gfbio_source.cpp  pangaea_source.cpp  terminology_resolver.cpp
src/portal/: basketapi.cpp  basketapi.h
src/services/: bexis.cpp  bexis.h  gfbio.cpp  openid_connect.cpp  openid_connect.h
src/util/: gfbiodatautil.cpp  gfbiodatautil.h  pangaeaapi.cpp  pangaeaapi.h  terminology.cpp  terminology.h
test/: CMakeLists.txt
test/systemtests/data/: terminology_test.csv
test/systemtests/queries/: abcd_source_example.json  pangaea_source.json  pangaea_source_no_latlon_columns_coverage_box.json  pangaea_source_no_latlon_columns_coverage_box2.json  pangaea_source_no_latlon_columns_coverage_point.json  terminology_resolver_first.json
test/unittests/: terminology.cpp
util/: gfbiodatautil.cpp  gfbiodatautil.h  pangaeaapi.cpp  pangaeaapi.h
(+358 files in other folders)
